--- a/src/html/o_educalivros.html
+++ b/src/html/o_educalivros.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link href="../../Nav.css" rel="stylesheet">
+    <link href="../../src/css/o_educalivros.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O EducaLivros</title>
 </head>
+
 <body>
+    <header>
+        <nav class="MenuPrincipal">
+            <ul>
+                <li><a id="bem_vindo">Bem-vindo</a></li>
+                <li><a id="o_educalivros">O EducaLivros</a></li>
+                <li><a id="nossa_estrutura">Nossa Estrutura</a></li>
+                <li class="dropdown"><a href="" draggable="false" class="dropbtn">Produtos</a>
+                    <div class="dropdown-content">
+                        <a id="fardamento">Fardamento</a>
+                        <a id="material">Material Didático</a>
+                    </div>
+                </li>
+                <li class="dropdown"><a href="" draggable="false" class="dropbtn">Serviços</a>
+                    <div class="dropdown-content">
+                        <a id="aulas_particulares">Aulas Particulares</a>
+                        <a id="cursos">Cursos</a>
+                        <a id="esportes">Esportes</a>
+                    </div>
+                </li>
+                <li class="dropdown"><a a href="" draggable="false" class="dropbtn" id="nossa_biblioteca">Nossa
+                        Biblioteca</a>
+                    <div class="dropdown-content">
+                        <a id="consulta_acervo">Consulta ao acervo</a>
+                        <a id="ebooks">Ebooks</a>
+                        <a id="emprestimos">Empréstimos</a>
+                    </div>
+                </li>
+                <li><a id="login">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="sobre">
+            <h2>Sobre o EducaLivros</h2>
+            <hr>
+            <p>
+                Na Educalivros, temos orgulho de nossa longa tradição em oferecer uma educação que coloca grande ênfase na leitura. 
+                Nossa escola possui uma extensa biblioteca, repleta de livros e recursos que enriquecem o aprendizado dos alunos.
+            </p>
+            <p>
+                Acreditamos no desenvolvimento integral dos estudantes, por isso oferecemos uma variedade de atividades extracurriculares, incluindo esportes e teatro. 
+                Essas atividades são fundamentais para complementar a formação acadêmica e promover habilidades sociais e de trabalho em equipe.
+            </p>
+            <p>
+                Nosso ambiente é extremamente acolhedor e inclusivo, estendendo-se também às famílias dos alunos. 
+                Aqui na Educalivros, todos são parte de uma grande família educativa, comprometida com o sucesso e bem-estar de cada membro.
+            </p>
+            <p>
+                Com anos de experiência, seguimos comprometidos com a excelência e dedicados a preparar os alunos para um futuro promissor.
+            </p>
+        </section>
+        <section id="valores">
+            <h2>Valores da EducaLivros</h2>
+            <hr>
+
+        </section>
+    </main>
     
 </body>
+
 </html>
